feat(dsm): expose profile disclosure API
